--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "skuad",
+  "name": "btesting",
   "version": "1.0.0",
-  "description": "Skuad design system",
+  "description": "btesting design system",
   "main": "index.js",
   "scripts": {
-    "build": "lerna run --parallel --scope \"@skuad/*\" build",
+    "build": "lerna run --parallel --scope \"@btesting/*\" build",
     "bootstrap": "lerna bootstrap",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
@@ -14,10 +14,10 @@
     "prettier:write": "prettier --write '**/*.{scss,js,ts}'"
   },
   "keywords": [
-    "Skuad",
+    "btesting",
     "Design system"
   ],
-  "author": "Skuad Team",
+  "author": "btesting Team",
   "license": "ISC",
   "dependencies": {
     "prop-types": "^15.7.2",
