--- a/packages/version-checker/package.json
+++ b/packages/version-checker/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@skuad/version-checker",
+  "name": "@btesting/version-checker",
   "version": "0.0.1",
-  "description": "Skuad core",
+  "description": "btesting core",
   "main": "build/index.cjs.js",
   "module": "build/index.esm.js",
   "src": "src/index.js",
