--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -14,7 +14,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "paths": {
-      "@skuad/*": ["packages/*/src"]
+      "@btesting/*": ["packages/*/src"]
     }
   }
 }
