--- a/packages/version-checker/package.json
+++ b/packages/version-checker/package.json
@@ -25,5 +25,6 @@
     "@types/react": "^16.8.6 || ^17.0.0",
     "react": "^16.8.0 || ^17.0.0",
     "react-dom": "^16.8.0 || ^17.0.0"
-  }
+  },
+  "gitHead": "f80a6b778dea92a394b6a0e5a73100b9705d2679"
 }
