--- a/packages/version-checker/package.json
+++ b/packages/version-checker/package.json
@@ -2,8 +2,8 @@
   "name": "@btesting/version-checker",
   "version": "0.0.1-alpha.0",
   "description": "btesting core",
-  "main": "build/index.cjs.js",
-  "module": "build/index.esm.js",
+  "main": "dist/version-checker.cjs.js",
+  "module": "dist/version-checker.esm.js",
   "src": "src/index.js",
   "directories": {
     "src": "src"
