--- a/packages/version-checker/package.json
+++ b/packages/version-checker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@btesting/version-checker",
-  "version": "0.0.1-alpha.0",
+  "version": "0.1.0",
   "description": "btesting core",
   "main": "dist/version-checker.cjs.js",
   "module": "dist/version-checker.esm.js",
