--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,6 +15,7 @@
     "build": "node ../../scripts/build.js"
   },
   "dependencies": {
+    "@btesting/version-checker": "^0.1.0",
     "@material-ui/core": "^4.11.0"
   },
   "peerDependencies": {
