--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@btesting/core",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha.0",
   "description": "btesting core",
   "main": "dist/core.cjs.js",
   "module": "dist/core.esm.js",
