--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.0",
   "description": "btesting design system",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "build": "lerna run --parallel --scope \"@btesting/*\" build",
     "bootstrap": "lerna bootstrap",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "deploy": "npm run build-storybook",
     "prettier": "prettier --check '**/*.{scss,js,ts}'",
     "prettier:write": "prettier --write '**/*.{scss,js,ts}'"
@@ -20,25 +19,31 @@
   "author": "btesting Team",
   "license": "ISC",
   "dependencies": {
+    "fs-extra": "^9.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
     "@babel/core": "^7.12.10",
+    "@babel/node": "^7.10.1",
+    "@babel/plugin-transform-object-assign": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
     "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-typescript": "^8.1.1",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-docs": "^5.3.19",
-    "@storybook/addon-essentials": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/react": "^5.3.19",
-    "@storybook/source-loader": "^5.3.19",
+    "@types/yargs": "^16.0.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-istanbul": "^6.0.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-react-remove-properties": "^0.3.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "fast-glob": "^3.2.5",
     "husky": "^4.3.8",
     "lerna": "^3.22.1",
     "lint-staged": "^10.5.3",
@@ -48,5 +53,8 @@
     "rollup-plugin-typescript2": "^0.29.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
