--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,8 +17,7 @@
     "prebuild": "rimraf build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/style": "^4.11.0"
+    "@material-ui/core": "^4.11.0"
   },
   "peerDependencies": {
     "@types/react": "^16.8.6 || ^17.0.0",
