--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bcrazydreamer/core",
+  "name": "@bharat-skuad/core",
   "version": "0.2.0-alpha.0",
   "description": "btesting core",
   "main": "dist/core.cjs.js",
